# ApredizajePorRefuerzoModuloLunar

./: DQN-tensorflow.py  DQN.py  Graficas.py  LICENSE  LunarRL.ipynb  Pipfile  README.md  cuda.ipynb  model_experiments.ipynb  modelo_DQN 1-1600-173.h5  modelo_DQN.h5  profile.ipynb  pyproject.toml  train.ipynb
experimentos/: keras_basics.ipynb
memorias/: 2025-05-29.txt
training/dqn_14000/: episode_10_replay_101_(-481.01).h5  episode_10_replay_111_(-487.02).h5  episode_10_replay_11_(-402.41).h5  episode_10_replay_121_(-497.00).h5  episode_10_replay_131_(-501.64).h5  episode_10_replay_141_(-519.06).h5  episode_10_replay_151_(-523.39).h5  episode_10_replay_161_(-518.13).h5  episode_10_replay_171_(-519.07).h5  episode_10_replay_181_(-525.79).h5  episode_10_replay_191_(-525.96).h5  episode_10_replay_1_(-370.67).h5  episode_10_replay_201_(-529.76).h5  episode_10_replay_211_(-528.84).h5  episode_10_replay_21_(-422.68).h5  episode_10_replay_221_(-521.46).h5  episode_10_replay_231_(-519.11).h5  episode_10_replay_241_(-512.43).h5  episode_10_replay_251_(-503.39).h5  episode_10_replay_261_(-495.19).h5  episode_10_replay_271_(-487.17).h5  episode_10_replay_281_(-479.55).h5  episode_10_replay_291_(-474.46).h5  episode_10_replay_301_(-467.02).h5  episode_10_replay_311_(-456.78).h5  episode_10_replay_31_(-437.66).h5  episode_10_replay_321_(-441.84).h5  episode_10_replay_331_(-422.92).h5  episode_10_replay_341_(-402.16).h5  episode_10_replay_351_(-384.66).h5  episode_10_replay_361_(-362.47).h5  episode_10_replay_371_(-340.18).h5  episode_10_replay_381_(-315.73).h5  (+1370 more)
(+554 files in other folders)
