[project]
name = "aprendizaje-modulo-lunar"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "gymnasium[box2d] (>=1.1.1,<2.0.0)",
    "tensorflow-io-gcs-filesystem (==0.27.0)",
    "tensorflow (==2.19)",
    "torch (==2.3.1)",
    "numpy (<2)",
    "pysimplegui (>=5.0.8.3,<6.0.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu-src"}
